fix(css): add missing margins

--- a/src/CustomTable.css
+++ b/src/CustomTable.css
@@ -20,7 +20,7 @@
   margin-right: 0.5rem;
 }
 
-.custom-table select {
+.custom-table-filter select {
   margin: 0 0.625rem;
 }
 
